Gooder CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required (VERSION 2.6)
 project (d2grailcheck C)
 
-include_directories(${PROJECT_SOURCE_DIR}/src)
+include_directories(src/)
+file(GLOB HEADERS "src/*.h")
+file(GLOB SRC "src/*.c")
 
-add_executable( d2grailcheck src/d2grailcheck.c src/d2txtreader.c src/bitreader.c src/d2itemreader.c src/d2data.c src/util.c )
+add_executable( d2grailcheck ${SRC} ${HEADERS} )
