Add support for testing + basic bitreader test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,22 @@ cmake_minimum_required (VERSION 2.6)
 project (d2grailcheck C)
 
 include_directories(src/)
+set(EXESRC "src/d2grailcheck.c")
 file(GLOB HEADERS "src/*.h")
-file(GLOB SRC "src/*.c")
+file(GLOB LIBSRC "src/*.c")
+list(REMOVE_ITEM LIBSRC ${EXESRC})
 
-add_executable( d2grailcheck ${SRC} ${HEADERS} )
+add_library( d2itemreader ${LIBSRC} ${HEADERS} )
+add_executable( d2grailcheck ${EXESRC} )
+target_link_libraries( d2grailcheck PRIVATE d2itemreader )
+
+enable_testing()
+
+file(GLOB TESTS_SRC "tests/*.c")
+foreach(test_case ${TESTS_SRC})
+  string(REGEX REPLACE ".+\\/(.+)\\.c" "\\1" test_case_name ${test_case})
+  add_executable(${test_case_name} ${test_case})
+  target_link_libraries(${test_case_name} PRIVATE d2itemreader)
+  target_include_directories(${test_case_name} PRIVATE tests)
+  add_test(NAME ${test_case_name} COMMAND $<TARGET_FILE:${test_case_name}> WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tests)
+endforeach()
