--- a/tests/fuzz/CMakeLists.txt
+++ b/tests/fuzz/CMakeLists.txt
@@ -45,4 +45,5 @@ if (ENABLE_FUZZING)
   add_fuzz(fuzz_d2atmastash d2atmastash.dict)
   add_fuzz(fuzz_d2personalstash d2personalstash.dict)
   add_fuzz(fuzz_d2sharedstash d2sharedstash.dict)
+  add_fuzz(fuzz_d2txt d2txt.dict)
 endif()
