--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,13 +3,16 @@ matrix:
 
 environment:
   matrix:
-    - GENERATOR: "Visual Studio 12 Win64"
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
+      GENERATOR: "Visual Studio 12 Win64"
       CONFIG: Release
 
-    - GENERATOR: "Visual Studio 14 Win64"
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+      GENERATOR: "Visual Studio 14 Win64"
       CONFIG: Release
 
-    - GENERATOR: "Visual Studio 15 Win64"
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      GENERATOR: "Visual Studio 15 Win64"
       CONFIG: Release
 
 before_build:
