Fix last commit

--- a/.travis.yml
+++ b/.travis.yml
@@ -46,4 +46,4 @@ deploy:
   keep-history: true
   on:
     branch: master
-    condition: "$TRAVIS_OS_NAME" = "linux"
+    condition: $TRAVIS_OS_NAME = "linux"
