Prep CMake for fuzzbuzz

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,12 +34,12 @@ if (COVERAGE)
   set(COVERAGE_LINKER_FLAGS  "-fprofile-instr-generate -fcoverage-mapping")
 endif()
 if (ENABLE_FUZZING)
-  if(NOT "${CMAKE_C_COMPILER_ID}" STREQUAL "Clang")
-    message(FATAL_ERROR "Fuzzing requires the clang compiler")
+  if(NOT FUZZ_ENGINE OR NOT "${CMAKE_C_COMPILER_ID}" STREQUAL "Clang")
+    message(FATAL_ERROR "Fuzzing requires a FUZZ_ENGINE or the Clang compiler")
   endif()
 
   set(CMAKE_BUILD_TYPE Debug)
-  if (NOT COVERAGE)
+  if (NOT COVERAGE AND NOT FUZZ_ENGINE)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -fsanitize=address,undefined,fuzzer -fno-sanitize=alignment -fno-omit-frame-pointer")
   endif()
 
