--- a/tests/fuzz/CMakeLists.txt
+++ b/tests/fuzz/CMakeLists.txt
@@ -1,12 +1,12 @@
 if (ENABLE_FUZZING)
-  if(NOT "${CMAKE_C_COMPILER_ID}" STREQUAL "Clang")
-    message(FATAL_ERROR "Fuzzing requires the clang compiler")
-  endif()
-
   enable_language(CXX)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_C_FLAGS}")
 
   add_custom_target(fuzz_check_all)
+
+  if (FUZZ_ENTRY)
+    add_compile_definitions(FUZZ_ENTRY=${FUZZ_ENTRY})
+  endif()
 
   function(add_fuzz name dict)
     if (COVERAGE)
@@ -18,7 +18,7 @@ if (ENABLE_FUZZING)
       )
     else()
       add_executable(${name} "${name}.cc")
-      target_link_libraries(${name} d2itemreader pthread)
+      target_link_libraries(${name} d2itemreader pthread ${FUZZ_ENGINE})
       set(${name}_corpus "${CMAKE_CURRENT_SOURCE_DIR}/corpus/${name}")
       add_custom_target(${name}_run COMMAND ${CMAKE_COMMAND} -E env "ASAN_OPTIONS=allocator_may_return_null=1" "${CMAKE_CURRENT_BINARY_DIR}/${name}" -timeout=2 -dict="${CMAKE_CURRENT_SOURCE_DIR}/dict/${dict}" "${${name}_corpus}" DEPENDS ${name})
       set(${name}_new_corpus "${CMAKE_CURRENT_BINARY_DIR}/corpus/${name}")
