--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,6 @@ insert_final_newline = true
 indent_style = space
 indent_size = 2
 
-[*.yml]
+[*.{yml,yaml}]
 indent_style = space
 indent_size = 2
