--- a/fuzz.yaml
+++ b/fuzz.yaml
@@ -4,7 +4,7 @@ language: c
 setup:
   - sudo apt-get update
   - sudo apt-get -y install cmake
-  - rm -rf build.fuzzbuzz && mkdir build.fuzzbuzz
+  - mkdir -p build.fuzzbuzz
   - cd build.fuzzbuzz
   - cmake .. -DENABLE_FUZZING=On -DFUZZ_ENTRY=FuzzerEntrypoint -DFUZZ_ENGINE=$FUZZ_ENGINE -DCMAKE_C_COMPILER=$FUZZ_CC -DCMAKE_CXX_COMPILER=$FUZZ_CXX
   - cd ..
