Use add_definitions instead of add_compile_definitions
(to support older CMake versions like the default on Ubuntu 16.04)

--- a/tests/fuzz/CMakeLists.txt
+++ b/tests/fuzz/CMakeLists.txt
@@ -5,7 +5,7 @@ if (ENABLE_FUZZING)
   add_custom_target(fuzz_check_all)
 
   if (FUZZ_ENTRY)
-    add_compile_definitions(FUZZ_ENTRY=${FUZZ_ENTRY})
+    add_definitions(-DFUZZ_ENTRY=${FUZZ_ENTRY})
   endif()
 
   function(add_fuzz name dict)
