--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ save/
 *.exe
 docs/api.md
 docs/INDEX.md
+*.sublime-project
+*.sublime-workspace
 
 # Created by https://www.gitignore.io/api/macos,linux,cmake,windows
 
