Try to fix gitattributes for d2data_default.inc

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
-src/d2data_default.inc linguist-language=C linguist-generated
+src/d2data_default.inc linguist-language=C
+src/d2data_default.inc linguist-generated
