--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,5 +1,7 @@
 project(d2itemreader-examples C)
 
+add_custom_target(examples)
+
 file(GLOB EXAMPLES_SRC "*.c")
 foreach(example_case ${EXAMPLES_SRC})
   string(REGEX REPLACE ".+\\/(.+)\\.c" "\\1" example_name ${example_case})
@@ -8,4 +10,5 @@ foreach(example_case ${EXAMPLES_SRC})
   target_link_libraries(${example_name} PRIVATE d2itemreader)
   target_include_directories(${example_name} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
   set_target_properties(${example_name} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+  add_dependencies(examples ${example_name})
 endforeach()
