--- a/docs/package.json
+++ b/docs/package.json
@@ -7,5 +7,5 @@
     "moxygen": "git://github.com/squeek502/moxygen.git",
     "gitbook-cli": "^2.3.2"
   },
-  "devDependencies": {},
+  "devDependencies": {}
 }
