Add 'tools' target to build all tools at once
Like the 'examples' target but for tools

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -11,3 +11,6 @@ target_link_libraries( tool_gen_expected_errors PRIVATE d2itemreader )
 set_target_properties(tool_gen_expected_errors PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
 
 add_custom_target(tool_gen_expected_errors_run tool_gen_expected_errors tests/fuzz/corpus > tests/data/expected_errors.txt DEPENDS tool_gen_expected_errors WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
+
+add_custom_target(tools)
+add_dependencies(tools tool_gen_d2gamedata_default tool_gen_expected_errors)
