--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,9 @@ jobs:
     - name: Build (examples)
       run: cmake --build ${{github.workspace}}/build --target examples
 
+    - name: Build (tools)
+      run: cmake --build ${{github.workspace}}/build --target tools
+
     - name: Test
       working-directory: ${{github.workspace}}/build
       run: ctest --output-on-failure
